19990606-20:20 CET Victor Szel

  * source/rtl/dir.c - 
    HB_CHARUPPER() parameters were wrong.
    HB_CHARUPPER() converted to toupper()
    The attribute parameter conversion to uppercase was buggy.

19990606-15:20 CET Eddie Runia
  * source/compiler/harbour.y
    - <object>:<data> <assignment> <value> is now functioning !
      where <assignment> is +=, -=, *=, /=, %=, ^=
      and increment / decrement for <object>:<data>
  + tests/working/objasign.prg
    test program used

19990606-13:50 CET Eddie Runia
  * source/rtl/errorapi.c
    _ErrNew()     stack.Return itself was returned instead of a copy.
    _ErrRelease() error object is released
  * source/rtl/classes.c
    SetData() & SetClassData() return the value set
  * source/compiler/harbour.y
    - <object>:<data> := <value> can now be used inside expressions (codeblocks)
    - MessageFix() has been added to fix the generated message in case of
                 assignments
    - type of ObjectData is now a string containing the (last) message.
      global _lMessageFix will contain a pointer to the location which should
      be fixed.
  * tests/working/inherit.prg
    test program for 'enhanced' syntax.

19990606-11:00 CET Eddie Runia
  * source/rtl/arrays.c; source/vm/initsymb.c; tests/working/run_exp.h
    Arrays converted to init symbols

19990606-10:15 CET Jose Lalin (upload Eddie Runia)
  + source/rtl/hardcr.c; source/rtl/mtran.c
    new !
  * source/vm/initsymb.c
    added initsymbols call
  * makefile.*
    files added

19990605-20:05 EST Les. Griffith
  * some fixes to dir.c for gcc and suggestions by Victor Szel
    need replacement for non gcc supported functions ltoa() and strrev()

19990606-00:30 CET Eddie Runia
  * tests/working/hardcr.prg; tests/working/mtran.prg
    Uploaded. Matching .C untested and missing for now.
    Just wanted #100 & #101 in !

19990605-11:12 EST Les. Griffith
  * removed DIRECTORY() from files.c
  * added rtl\dir.c
  * added tests working dirtest.prg